--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,19 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  color: #010101;
+
+  background-image: linear-gradient(
+      to right,
+      rgba(255, 255, 255, 0.4),
+      rgba(248, 248, 248, 0.4)
+    ),
+    url(./images/background.jpg);
 }
 
 code {
